--- a/templates/main/register_user.html
+++ b/templates/main/register_user.html
@@ -2,13 +2,13 @@
 
 {% load bootstrap4 %}
 
-{% block title %}Смена пароля{% endblock %}
+{% block title %}Регистрация{% endblock %}
 
 {% block content %}
-<h2>Смена пароля пользователя {{ user.username }}</h2>
+<h2>Создать нового пользователя</h2>
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form layout='horizontal' %}
-        {% buttons submit='Сменить пароль' %}{% endbuttons %}
+        {% buttons submit='Создать' %}{% endbuttons %}
     </form>
 {% endblock %}
