--- a/templates/layout/basic.html
+++ b/templates/layout/basic.html
@@ -53,14 +53,23 @@
 <div class="row">
     <nav class="col-md-auto nav flex-column border">
         <a href="{% url 'main:index' %}" class="nav-link root">Главная</a>
+            {% for rubric in rubrics %}
+                {% ifchanged rubric.super_rubric.pk %}
+                    <span class="nav-link root font-weight-bold">
+                        {{ rubric.super_rubric.name }}
+                    </span>
+                {% endifchanged %}
+                <a class="nav-link" href="{% url 'main:by_rubric' pk=rubric.pk %}">{{ rubric.name }}</a>
+            {% endfor %}
+
         <a href="{% url 'main:other' page='about' %}" class="nav-link root">О сайте</a>
-        <span class="nav-link root font-weight-bold">Недвижимость</span>
-        <a href="#" class="nav-link">Жилье</a>
-        <a href="#" class="nav-link">Склады</a>
-        <a href="#" class="nav-link">Гаражи</a>
-        <span class="nav-link root font-weight-bold">Транспорт</span>
-        <a href="#" class="nav-link">Легковой</a>
-        <a href="#" class="nav-link">Грузовой</a>
+<!--        <span class="nav-link root font-weight-bold">Недвижимость</span>-->
+<!--        <a href="#" class="nav-link">Жилье</a>-->
+<!--        <a href="#" class="nav-link">Склады</a>-->
+<!--        <a href="#" class="nav-link">Гаражи</a>-->
+<!--        <span class="nav-link root font-weight-bold">Транспорт</span>-->
+<!--        <a href="#" class="nav-link">Легковой</a>-->
+<!--        <a href="#" class="nav-link">Грузовой</a>-->
     </nav>
     <section class="col border py-2">
         {% bootstrap_messages %}
