--- a/templates/main/detail.html
+++ b/templates/main/detail.html
@@ -7,7 +7,7 @@
         <div class="row">
             {% if bb.image %}
                 <div class="col-md-auto">
-                    <img src="{{ bb.image.url }}" class="main-image">
+                    <img src="{{ bb.image.url }}" alt="{{ bb.title }}" class="main-image">
                 </div>
             {% endif %}
             <div class="col">
@@ -22,27 +22,27 @@
     {% if ais %}
         <div class="d-flex justify-content-between flex-wrap mt-5">
             {% for ai in ais %}
-                <div><img src="{{ ai.image.url }}" class="additional-image"></div>
+                <div><img src="{{ ai.image.url }}" alt="{{ bb.title }}" class="additional-image"></div>
             {% endfor %}
         </div>
     {% endif %}
     <p><a href="{% url 'main:by_rubric' pk=bb.rubric.pk %}{{ all }}">Назад</a></p>
 
-    <h4 class="mt-5">Новый комментарий</h4>
-    <form method="post">
-        {% csrf_token %}
-        {% bootstrap_form form layout='horizontal' %}
-        {% buttons submit='Добавить' %}{% endbuttons %}
-    </form>
-    {% if comments %}
-    <div class="mt-5">
-        {% for comment in comments %}
-        <div class="my-2 p-2 border">
-            <h5>{{ comment.author }}</h5>
-            <p>{{ comment.content }}</p>
-            <p class="text-right font-italic">{{ comment.created_at }}</p>
-        </div>
-        {% endfor %}
-    </div>
+<!--    <h4 class="mt-5">Новый комментарий</h4>-->
+<!--    <form method="post">-->
+<!--        {% csrf_token %}-->
+<!--        {% bootstrap_form form layout='horizontal' %}-->
+<!--        {% buttons submit='Добавить' %}{% endbuttons %}-->
+<!--    </form>-->
+<!--    {% if comments %}-->
+<!--    <div class="mt-5">-->
+<!--        {% for comment in comments %}-->
+<!--        <div class="my-2 p-2 border">-->
+<!--            <h5>{{ comment.author }}</h5>-->
+<!--            <p>{{ comment.content }}</p>-->
+<!--            <p class="text-right font-italic">{{ comment.created_at }}</p>-->
+<!--        </div>-->
+<!--        {% endfor %}-->
+<!--    </div>-->
     {% endif %}
 {% endblock %}
