--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -1,5 +1,9 @@
 {% extends "layout/basic.html" %}
 
+{% load thumbnail %}
+{% load static %}
+{% load bootstrap4 %}
+
 {% block title %}Профиль пользователя{% endblock %}
 
 {% block content %}
@@ -9,14 +13,38 @@
     {% else %}
         <p>Здравствуйте!</p>
     {% endif %}
-    <h3>Ваши объявления</h3>
-        <div class="media-body">
-            <h3><a href="{{ url }}{{ all }}">{{ bb.title }}</a></h3>
-            <p class="text-right mt-2">
-                <a href="{% url 'main:profile_bb_change' pk=bb.pk %}">Исправить</a>
-                <a href="{% url 'main:profile_bb_delete' pk=bb.pk %}">Удалить</a>
-            </p>
-        </div>
 
-    <p><a href="{% url 'main:profile_bb_add' %}">Добавить объявление</a></p>
+        {% if bbs %}
+        <h3>Ваши объявления</h3>
+
+        <p><a href="{% url 'main:profile_bb_add' %}">Добавить объявление</a></p>
+
+        <ul class="list-unstyled">
+            {% for bb in bbs %}
+                <li class="media my-5 p-3 border">
+                    {% url 'main:profile_bb_detail' pk=bb.pk as url %}
+                    <a href="{{ url }}{{ all }}">
+                        {% if bb.image %}
+                            <img src="{% thumbnail bb.image 'default' %}" alt="{{ bb.name }}" class="mr-3">
+                        {% else %}
+                            <img src="{% static 'main/empty.jpg' %}" class="mr-3">
+                        {% endif %}
+                    </a>
+                    <div class="media-body">
+                        <h3><a href="{{ url }}{{ all }}">{{ bb.title }}</a></h3>
+                        <div>{{ bb.content }}</div>
+                        <p class="text-right font-weight-bold">{{ bb.price }} KZT</p>
+                        <p class="text-right font-italic">{{ bb.created_at }}</p>
+                    </div>
+
+                    <p class="text-right mt-2">
+                        <a href="{% url 'main:profile_bb_change' pk=bb.pk %}">Изменить</a>
+                        <a href="{% url 'main:profile_bb_delete' pk=bb.pk %}">Удалить</a>
+                    </p>
+
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
 {% endblock %}
