--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,5 +1,31 @@
 {% extends "layout/basic.html" %}
 
+{% load thumbnail %}
+{% load static %}
+{% load bootstrap4 %}
+
 {% block content %}
     <h2>Последние 10 объявлений</h2>
+    {% if bbs %}
+        <ul class="list-unstyled">
+            {% for bb in bbs %}
+                <li class="media my-5 p-3 border">
+                    {% url 'main:detail' rubric_pk=rubric.pk pk=bb.pk as url %}
+                    <a href="{{ url }}{{ all }}">
+                        {% if bb.image %}
+                            <img src="{% thumbnail bb.image 'default' %}" alt="{{ bb.name }}" class="mr-3">
+                        {% else %}
+                            <img src="{% static 'main/empty.jpg' %}" class="mr-3">
+                        {% endif %}
+                    </a>
+                    <div class="media-body">
+                        <h3><a href="{{ url }}{{ all }}">{{ bb.title }}</a></h3>
+                        <div>{{ bb.content }}</div>
+                        <p class="text-right font-weight-bold">{{ bb.price }} KZT</p>
+                        <p class="text-right font-italic">{{ bb.created_at }}</p>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 {% endblock %}
